# cpp-sonoff

./: CMakeLists.txt  README.md  platformio.ini
src/: main.cpp
